--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".setting.favorites">
 
+    <!--상단 즐겨찾기 텍스트-->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,11 +21,15 @@
         android:layout_marginTop="4dp"
         android:gravity="center"/>
 
+    <!--뒤로가기 이미지-->
+
     <ImageView
         android:id="@+id/btn_arrow3"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/arrow" />
+
+    <!--상단 밑 선-->
 
     <View
         android:layout_width="match_parent"
@@ -35,6 +41,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--위쪽 세로 선-->
+
     <View
         android:layout_width="2dp"
         android:layout_height="250dp"
@@ -44,6 +52,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <!--아래쪽 세로 선-->
 
     <View
         android:layout_width="2dp"
@@ -55,6 +65,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--왼쪽 가로 선-->
+
     <View
         android:layout_width="198dp"
         android:layout_height="2dp"
@@ -65,6 +77,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--오른쪽 가로 선-->
+
     <View
         android:layout_width="200dp"
         android:layout_height="2dp"
@@ -74,6 +88,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <!--즐겨찾기 한 포스터-->
 
     <LinearLayout
         android:layout_width="200dp"
@@ -97,6 +113,8 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <!--즐겨찾기 별 이미지-->
 
     <ImageView
         android:id="@+id/btn_favorites2"
