--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center" />
 
+    <!--회색 바탕-->
+
     <View
         android:layout_width="match_parent"
         android:layout_height="210dp"
@@ -74,6 +76,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 버튼들 담은 레이아웃 -->
+
     <GridLayout
         android:id="@+id/grid_menu"
         android:layout_width="0dp"
@@ -86,7 +89,8 @@
         app:layout_constraintEnd_toEndOf="parent">
 
 
-        <!-- 각 버튼 -->
+        <!-- 각 버튼 --> <!--공지사항-->
+
         <LinearLayout
             android:layout_width="116dp"
             android:layout_height="wrap_content"
@@ -110,6 +114,8 @@
 
         </LinearLayout>
 
+        <!--즐겨찾기-->
+
         <LinearLayout
             android:layout_width="130dp"
             android:layout_height="wrap_content"
@@ -132,6 +138,8 @@
 
         </LinearLayout>
 
+        <!--내 정보 관리-->
+
         <LinearLayout
             android:layout_width="130dp"
             android:layout_height="wrap_content"
@@ -152,6 +160,8 @@
                 android:textSize="16dp"
                 android:text="내 정보 관리" />
         </LinearLayout>
+
+        <!--고객 센터-->
 
         <LinearLayout
             android:layout_width="116dp"
@@ -174,6 +184,8 @@
                 android:text="고객 센터" />
         </LinearLayout>
 
+        <!--푸시 알림 설정-->
+
         <LinearLayout
             android:layout_width="130dp"
             android:layout_height="wrap_content"
@@ -194,6 +206,8 @@
                 android:textSize="16dp"
                 android:text="푸시 알림 설정" />
         </LinearLayout>
+
+        <!--개인정보 처리방침-->
 
         <LinearLayout
             android:layout_width="140dp"
